-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b10
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8003865 | 8 | Zhengyu Gu | P4 | Closed | Fixed | b66 |
| JDK-8017839 | 7u45 | Zhengyu Gu | P4 | Closed | Fixed | b01 |
| JDK-8003290 | 7u40 | Zhengyu Gu | P4 | Closed | Fixed | b04 |
| JDK-8003873 | hs24 | Zhengyu Gu | P4 | Closed | Fixed | master |
This bug is related to JDK-8001743.
When 3rd party thread attaches JVM, but does not deattach JVM before it exits, that causes JVM to leak JavaThread object.
NMT has the capability to capture the scenarios, it should report the problem when -Xcheck:jni is enabled.
When 3rd party thread attaches JVM, but does not deattach JVM before it exits, that causes JVM to leak JavaThread object.
NMT has the capability to capture the scenarios, it should report the problem when -Xcheck:jni is enabled.
- backported by
-
JDK-8003290 NMT to report JNI memory leaks when -Xcheck:jni is on
-
- Closed
-
-
JDK-8003865 NMT to report JNI memory leaks when -Xcheck:jni is on
-
- Closed
-
-
JDK-8003873 NMT to report JNI memory leaks when -Xcheck:jni is on
-
- Closed
-
-
JDK-8017839 NMT to report JNI memory leaks when -Xcheck:jni is on
-
- Closed
-
- relates to
-
JDK-8290043 serviceability/attach/ConcAttachTest.java failed "guarantee(!CheckJNICalls) failed: Attached JNI thread exited without being detached"
-
- Resolved
-