8002273: NMT to report JNI memory leaks when -Xcheck:jni is on

Allows NMT to report that JNI thread failed to detach from JVM before exiting, which leaks the JavaThread object when check:jni option is on.

Reviewed-by: acorn, dholmes, coleenp, ctornqvi